--- a/My Page/Portfolio/Blog.html
+++ b/My Page/Portfolio/Blog.html
@@ -268,7 +268,7 @@
         <div class="row" data-aos="zoom-in" data-aos-delay="100">
           <div class="col-lg-4 col-md-6 d-flex">
             <div class="item">
-              <img src="images/봄봄.jpg" class="img-fluid" alt="">
+              <a href="images/봄봄.jpg"><img src="images/봄봄.jpg" class="img-fluid" alt=""></a>
               <div>
                 <h3><a href="images/봄봄.jpg" style="font-weight:bold; color:#F15891;">
                   <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-flower2" viewBox="0 0 16 16" style="color:#F15891">
@@ -298,7 +298,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex">
             <div class="item">
-              <img src="images/여름여름.jpg" class="img-fluid" alt="">
+              <a href="images/여름여름.jpg"><img src="images/여름여름.jpg" class="img-fluid" alt=""></a>
               <div>
                 <h3><a href="images/여름여름.jpg" style="font-weight:bold; color:#ECBD2F;">
                   <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-moon-stars" viewBox="0 0 16 16" style="color:#ECBD2F">
@@ -328,9 +328,9 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+          <div class="col-lg-4 col-md-6 d-flex mt-4 mt-md-0">
             <div class="item">
-              <img src="images/눈.jpg" class="img-fluid" alt="">
+              <a href="images/눈.jpg"><img src="images/눈.jpg" class="img-fluid" alt=""></a>
               <div>
                 <h3><a href="images/눈.jpg" style="font-weight:bold; color:#90C1FF;">
                   <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-snow2" viewBox="0 0 16 16" style="color:#90C1FF">
@@ -343,7 +343,7 @@
                   <div class="d-flex align-items-center">
                     <span style="text-decoration-line: underline">Yujin Choi</span>
                   </div>
-                  <div class="trainer-rank d-flex align-items-center">
+                  <div class="d-flex align-items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                       <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z"/>
                     </svg>&nbsp;51
@@ -356,9 +356,9 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-3 md-0">
+          <div class="col-lg-4 col-md-6 d-flex mt-4 mt-3 md-0">
             <div class="item">
-              <img src="images/klaris.jpg" class="img-fluid" alt="">
+              <a href="images/klaris.jpg"><img src="images/klaris.jpg" class="img-fluid" alt=""></a>
               <div>
                 <h3><a href="images/klaris.jpg" style="font-weight:bold; color:#B96BC6;">
                   <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-droplet-half" viewBox="0 0 16 16" style="color:#B96BC6">
@@ -373,7 +373,7 @@
                   <div class="d-flex align-items-center">
                     <span style="text-decoration-line: underline">Yujin Choi</span>
                   </div>
-                  <div class="trainer-rank d-flex align-items-center">
+                  <div class="d-flex align-items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                       <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z"/>
                     </svg>&nbsp;62
@@ -386,9 +386,9 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-3 md-0">
+          <div class="col-lg-4 col-md-6 d-flex mt-4 mt-3 md-0">
             <div class="item">
-              <img src="images/코난.jpg" class="img-fluid" alt="">
+              <a href="images/코난.jpg"><img src="images/코난.jpg" class="img-fluid" alt=""></a>
               <div>
                 <h3><a href="images/코난.jpg" style="font-weight:bold; color:#242F6E;">
                   <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-capsule" viewBox="0 0 16 16" style="color:#242F6E">
@@ -401,7 +401,7 @@
                   <div class="d-flex align-items-center">
                     <span style="text-decoration-line: underline">Yujin Choi</span>
                   </div>
-                  <div class="trainer-rank d-flex align-items-center">
+                  <div class="d-flex align-items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                       <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z"/>
                     </svg>&nbsp;75
@@ -414,9 +414,9 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-3 md-0">
+          <div class="col-lg-4 col-md-6 d-flex mt-4 mt-3 md-0">
             <div class="item">
-              <img src="images/302.jpg" class="img-fluid" alt="">
+              <a href="images/302.jpg"><img src="images/302.jpg" class="img-fluid" alt=""></a>
               <div>
                 <h3><a href="images/302.jpg" style="font-weight:bold; color:#86505D;">
                   <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16" style="color:#86505D">
@@ -429,7 +429,7 @@
                   <div class="d-flex align-items-center">
                     <span style="text-decoration-line: underline">Yujin Choi</span>
                   </div>
-                  <div class="trainer-rank d-flex align-items-center">
+                  <div class="d-flex align-items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                       <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z"/>
                     </svg>&nbsp;36
@@ -442,10 +442,10 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-3 md-0">
+          <div class="col-lg-4 col-md-6 d-flex mt-4 mt-3 md-0">
             <div class="item">
-              <img src="images/익선동.jpg" class="img-fluid" alt="">
-              <div>
+              <a href="images/익선동.jpg"><img src="images/익선동.jpg" class="img-fluid" alt=""></a>
+                <div>
                 <h3><a href="images/익선동.jpg" style="font-weight:bold; color:#6C2709;">
                   <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-shop" viewBox="0 0 16 16" style="color:#6C2709">
                     <path d="M2.97 1.35A1 1 0 0 1 3.73 1h8.54a1 1 0 0 1 .76.35l2.609 3.044A1.5 1.5 0 0 1 16 5.37v.255a2.375 2.375 0 0 1-4.25 1.458A2.371 2.371 0 0 1 9.875 8 2.37 2.37 0 0 1 8 7.083 2.37 2.37 0 0 1 6.125 8a2.37 2.37 0 0 1-1.875-.917A2.375 2.375 0 0 1 0 5.625V5.37a1.5 1.5 0 0 1 .361-.976l2.61-3.045zm1.78 4.275a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 1 0 2.75 0V5.37a.5.5 0 0 0-.12-.325L12.27 2H3.73L1.12 5.045A.5.5 0 0 0 1 5.37v.255a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0zM1.5 8.5A.5.5 0 0 1 2 9v6h1v-5a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v5h6V9a.5.5 0 0 1 1 0v6h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V9a.5.5 0 0 1 .5-.5zM4 15h3v-5H4v5zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-3zm3 0h-2v3h2v-3z"/>
@@ -457,7 +457,7 @@
                   <div class="d-flex align-items-center">
                     <span style="text-decoration-line: underline">Yujin Choi</span>
                   </div>
-                  <div class="trainer-rank d-flex align-items-center">
+                  <div class="d-flex align-items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                       <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z"/>
                     </svg>&nbsp;84                    &nbsp;&nbsp;
@@ -469,9 +469,9 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-3 md-0">
+          <div class="col-lg-4 col-md-6 d-flex mt-4 mt-3 md-0">
             <div class="item">
-              <img src="images/이상해씨.jpg" class="img-fluid" alt="">
+              <a href="images/이상해씨.jpg"><img src="images/이상해씨.jpg" class="img-fluid" alt=""></a>
               <div>
                 <h3><a href="images/이상해씨.jpg" style="font-weight:bold; color:#166872;">
                   <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-piggy-bank-fill" viewBox="0 0 16 16" style="color:#166872">
@@ -484,7 +484,7 @@
                   <div class="d-flex align-items-center">
                     <span style="text-decoration-line: underline">Yujin Choi</span>
                   </div>
-                  <div class="trainer-rank d-flex align-items-center">
+                  <div class="d-flex align-items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                       <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z"/>
                     </svg>&nbsp;26                    &nbsp;&nbsp;
@@ -496,9 +496,9 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-3 md-0">
+          <div class="col-lg-4 col-md-6 d-flex mt-4 mt-3 md-0">
             <div class="item">
-              <img src="images/트리.jpg" class="img-fluid" alt="">
+              <a href="images/트리.jpg"><img src="images/트리.jpg" class="img-fluid" alt=""></a>
               <div>
                 <h3><a href="images/트리.jpg" style="font-weight:bold; color:#4E593E;">
                   <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-tree-fill" viewBox="0 0 16 16" style="color:#4E593E">
@@ -511,7 +511,7 @@
                   <div class="d-flex align-items-center">
                     <span style="text-decoration-line: underline">Yujin Choi</span>
                   </div>
-                  <div class="trainer-rank d-flex align-items-center">
+                  <div class="d-flex align-items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                       <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z"/>
                     </svg>&nbsp;12                     &nbsp;&nbsp;
