--- a/My Page/Portfolio/interests.html
+++ b/My Page/Portfolio/interests.html
@@ -60,7 +60,7 @@
                     <a href="#sports">스포츠</a>
                   </li>
                   <li>
-                    <a href="#drama">드마라</a>
+                    <a href="#drama">드라마</a>
                   </li>
                 </ul>
               </li>
@@ -309,7 +309,7 @@
                             <path d="M13 6.5a6.471 6.471 0 0 1-1.258 3.844c.04.03.078.062.115.098l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1.007 1.007 0 0 1-.1-.115h.002A6.5 6.5 0 1 1 13 6.5ZM6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11Z"/>
                           </svg></h4>
                           <ul class="list-unstyled ul-check" style="color:#76A7D6">
-                            <li>내가 응원하는 팀은 <a href="https://www.instagram.com/mancity/"><span>맨체스터 시티!</span></a></li>
+                            <li>내가 응원하는 팀은 <a href="https://www.instagram.com/mancity/">맨체스터 시티!</span></a></li>
                             <li>개인적으로 리그 우승과 더불어 꼭 챔스 우승했으면 좋겠다,,🙏</li>
                             <li>맨시티를 좋아하게 된 순간은 에딘 제코의 중거리 슛을 본 이후부터!</li>
                             <li>시차로 인해 새벽에 경기를 보는 경우가 많으나 이제는 적응 완료😊</li>
@@ -376,7 +376,7 @@
             <div class="row justify-content-center text-center site-section pt-0">
               <div class="col-md-6">
                 <h2 class="display-4" data-aos="fade-up">ETC</h2>
-                <p data-aos="fade-up" data-aos-delay="100">NBA, EPL외에도 야구, 배구, 테니스 등 다양한 스포츠 경기를 보고 있다!(국내외 가리지 않고 모두 시청 중)<br>올림픽, 월드컵 기간에도 매 경기 꼬박꼬박 챙겨보는 편이다</p>
+                <p data-aos="fade-up" data-aos-delay="100">NBA, EPL외에도 야구, 배구, 테니스 등 다양한 스포츠 경기를 보고 있다!(국내외 가리지 않고 모두 시청 중)<br>올림픽, 월드컵 기간에는 리그 경기와 함께 올림픽, 월드컵 경기도 매번 꼬박꼬박 챙겨보는 편이다</p>
               </div>
             </div>
           </div>
@@ -402,11 +402,11 @@
                         <li>(여자)배구는 한국 도로공사를 응원!🏐</li>
                         <li>(여자)배구는 쫄깃한 랠리와 디그, 끈끈한 수비력이 관전 포인트라고 생각한다!</li>
                         <li>(남자)배구는 빠르고 강한 서브와 후위 공격을 보는 재미로 시청하고 있다!</li>
-                        <li>🤸‍호주 오픈과 윔블던을 롤랑가르스나 US오픈보다 더 좋아한다🥎</li>
+                        <li>🤸개인적으로 ‍호주 오픈과 윔블던을 롤랑가로스나 US오픈보다 더 좋아한다🥎</li>
                         <li>하계 올림픽 중에서 제일 좋아하는 종목은 펜싱과 장대 높이뛰기🤸‍</li>
                         <li>동계 올림픽 중에서 제일 좋아하는 종목은 쇼트트랙과 모굴스키🎿🏂</li>
-                        <li>본인은 상대적으로 언더독을 응원하는 경향이 짙다🙂</li>
-                        <li>스포츠 없는 하루는 상상하기 힘들 정도로 스포츠 경기를 보면서 힐링하고 있다~</li>
+                        <li>경기를 보다 보면, 나도 모르게 언더독을 응원하는 경우가 많다🙂</li>
+                        <li>스포츠 없는 인생은 상상하기 어려울 정도로 매일 여러 스포츠 경기를 감상하면서 힐링을 받고 있다~</li>
                       </ul>
                     </div>
                   </div>
@@ -423,7 +423,7 @@
             <div class="row justify-content-center text-center site-section pt-0">
               <div class="col-md-6">
                 <h2 class="display-4" data-aos="fade-up">Korean Dramas</h2>
-                <p data-aos="fade-up" data-aos-delay="100" style="font-weight:bold" class="h5 m-4"><img src="images/svg/heart.png" style="width:22px" alt=""> 어릴 적부터 꾸준히 챙겨보고 있는 드라마는 스포츠와 함께 나의 힐링 해소법이다 <img src="images/svg/heart.png" style="width:22px" alt=""></p>
+                <p data-aos="fade-up" data-aos-delay="100" style="font-weight:bold" class="h5 m-4"><img src="images/svg/heart.png" style="width:22px" alt=""> 어릴 적부터 꾸준히 챙겨보고 있는 드라마는 나의 스트레스 해소법 중 하나다! <img src="images/svg/heart.png" style="width:22px" alt=""></p>
                 <p data-aos="fade-up" data-aos-delay="100">좋아하는 장르는 추리물, 수사물, 법조물!</p>
                 <p data-aos="fade-up" data-aos-delay="100">자극적인 내용보다는 힐링, 감성적인 내용의 드라마를 더욱 선호하는 편🌝</p>
                 <p data-aos="fade-up" data-aos-delay="100">(다만 판타지 장르는 좋아하지 않는다😓)</p>
@@ -477,21 +477,178 @@
                 <div class="row justify-content-center">
                   <div class="col-md-8 py-5">
                     <div class="room-exerpt">
-                      <div class="room-price mb-4 font-weight-bold">인생 한드 모음</div>
-                      <p>지금까지 봤던 드라마 중에서 개인적으로 '인생 드라마'라고 생각했던 드라마들입니다!  </p>
+                      <div class="room-price mb-4 font-weight-bold">인생 한드 list</div>
+                      <p>지금까지 봤던 드라마 중에서 '인생 드라마'라고 꼽을 수 있는 <br> 드라마들입니다!  </p>
                       <div class="row mt-4">
                         <div class="col-12">
-                          <h4 class="mb-4 font-weight-bold">이모저모 <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-search-heart" viewBox="0 0 16 16">
+                          <h4 class="mb-4 font-weight-bold"> 감상평 요약 <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-search-heart" viewBox="0 0 16 16">
                             <path d="M6.5 4.482c1.664-1.673 5.825 1.254 0 5.018-5.825-3.764-1.664-6.69 0-5.018Z"/>
                             <path d="M13 6.5a6.471 6.471 0 0 1-1.258 3.844c.04.03.078.062.115.098l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1.007 1.007 0 0 1-.1-.115h.002A6.5 6.5 0 1 1 13 6.5ZM6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11Z"/>
                           </svg></h4>
-                          <ul class="list-unstyled ul-check" style="color:#0A402C">
-                            <li>내가 응원하는 팀은 <a href="https://www.instagram.com/celtics/" style="color:#01B05D"><span>보스턴 셀틱스!</span></a></li>
-                            <li>★현재 보스턴 셀텍스가 동부 컨퍼런스 1위★ <br> (하지만 2위 팀과의 승차가 많이 차이나지 않아 불안하다)</li>
-                            <li>개인적으로 경기는 동부보다 서부 경기가 더 재밌다✌</li>
-                            <li>NBA 입문은 친오빠의 영향으로,,</li>
-                            <li>⚠가끔은 시차로 인해 새벽에 기상할 때도 있으니 주의⚠</li>
-                            <li>가장 좋아하는 농구 스킬은 턴 어라운드 페이드 어웨이 슛🏀</li>
+                          <ul class="list-unstyled ul-check">
+                            <li>'로스쿨'은 내가 좋아하는 추리적 요소와 함께 법과 관련된 내용이 포함돼 있어 너무나 재밌게 봤던 드라마다!<br>사건의 범인을 추리해내는 쫄깃한 과정과 적당한 반전은 덤!</li>
+                            <li>'런온'은 주체적인 캐릭터와 흔하지 않은 스토리가 일품인 드라마다!잔잔하지만 짙은 울림이 있는 대사와 연출이 무척 취향이었다★</li>
+                            <li>'싸인'은 2011년 드라마지만, 아직까지도 내용이 생생하게 기억날 정도로 인상 깊었던 드라마로, 특히 마지막화는 지금 봐도 신선한 충격 그 자체다! 해당 드라마의 영향으로 법의학에도 관심을 갖게 되기도 했다.</li>
+                            <li>'서른이지만 열입곱입니다'는 특별한 악역이 없었던 점을 특징이라 할 수 있을 만큼 따듯하고 드라마였다! 마음의 힐링을 얻고 싶을 때 종종 찾아보길 추천한다!</li>
+                            <li>'당신이 잠든 사이에'는 개인적으로 좋아했던 작가님의 작품이었던 만큼 지루하지 않게 완주한 드라마다! 약간의 판타지 요소가 들어있지만 오히려 복선의 일부로 느껴져 극에 대한 몰입감을 더해줬다!</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="untree_co--site-section pb-0">
+          <div class="container-fluid px-md-0">
+            <div class="row justify-content-center text-center site-section pt-0">
+              <div class="col-md-6">
+                <h2 class="display-4" data-aos="fade-up">Japanese Dramas</h2>
+                <p data-aos="fade-up" data-aos-delay="100" style="font-weight:bold" class="h5 m-4"><img src="images/svg/heart.png" style="width:22px" alt=""> 일본 드라마는 일본어 공부를 위해 보기 시작했으며,<br> 지금도 청해 능력 향상을 위해 주기적으로 시청하고 있다👀 <img src="images/svg/heart.png" style="width:22px" alt=""></p>
+                <p data-aos="fade-up" data-aos-delay="100">일본 드라마는 한국 드라마보다 소재가 다양한 편이지만 그렇다 보니 오히려 거부감이 들 수 있기에😖<br> 시청 전에 미리 줄거리를 확인하고 감상하기!</p>
+                <p data-aos="fade-up" data-aos-delay="100">자막 없이 감상하려고 하다 보니 상대적으로 가벼운 회화로 구성된 로맨스 드라마 위주로 시청한 편이다🤗<br>(최근에는 경찰물, 법조물도 자막 없이 보고자 하고 있다!)</p>
+                <p data-aos="fade-up" data-aos-delay="100">🍿의외로 2000년대 일드 중에도 재밌는 것이 많다🍿</p>
+              </div>
+            </div>
+            <div class="row no-gutters align-items-stretch room-animate site-section">
+              <div class="col-md-5">
+                <div class="row justify-content-center">
+                  <div class="col-md-8 py-5">
+                    <div class="room-exerpt">
+                      <div class="room-price mb-4 font-weight-bold">추천 일드 list</div>
+                      <p>지금까지 봤던 일본 드라마 중에서 재밌다고 느낀 작품들입니다!</p>
+                      <div class="row mt-4">
+                        <div class="col-12">
+                          <h4 class="mb-4 font-weight-bold"> 감상평 요약 <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-search-heart" viewBox="0 0 16 16">
+                            <path d="M6.5 4.482c1.664-1.673 5.825 1.254 0 5.018-5.825-3.764-1.664-6.69 0-5.018Z"/>
+                            <path d="M13 6.5a6.471 6.471 0 0 1-1.258 3.844c.04.03.078.062.115.098l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1.007 1.007 0 0 1-.1-.115h.002A6.5 6.5 0 1 1 13 6.5ZM6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11Z"/>
+                          </svg></h4>
+                          <ul class="list-unstyled ul-check">
+                            <li>'사일런트'는 가장 최근에 본 일드다! 한국 드라마 같은 연출과 감성적인 스토리 라인, 그리고 주연 배우의 호흡이 무척 좋았다! OST와 드라마의 궁합도 완벽했기에 여운이 크게 남았던 드라마다!</li>
+                            <li>'프라이드'는 2004년 작품으로 상당히 오래됐으나, 아이스하키를 주제로 한 스포츠인들의 열정과 노력을 엿볼 수 있다는 점에서 스포츠 드라마만의 매력을 느낄 수 있는 드라마다! <br> 에피소드 간의 연결성도 좋고 주인공의 대사도 귀에 쏙쏙 꽂히기에 겨울이 되면 자연스레 찾아보게 된다🧣</li>
+                            <li>'오렌지데이즈'는 5명의 주인공들의 청춘을 현실적이면서 아름답게 그린 드라마다! 억지 설정, 전개가 없이 자연스럽게 흘러가는 작품이기에 보다보면 순식간에 마지막화에 다다르게 되며, 완주 후에도 후유증이 꽤나 크다🙊</li>
+                            <li>'오키테가미 쿄코의 비망록'은 라이트노벨이 원작이라서 처음에 나의 스타일과 맞지 않을 것 같다고 생각했지만, 의외로 가벼운 추리물로서 자잘한 사건을 해결하는 것이 꽤나 흥미롭게 느껴졌다. 시즌2가 나왔으면 하는 아쉬움이 남아있지만, 소소한 시간 때우기 용으로 적합한 작품이다!</li>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-7 img-wrap image-stack-item image-stack-item-top" data-jarallax-element="-100">
+                <div id="caarouseelIndicators" class="carousel slide" data-ride="carousel">
+                  <ol class="carousel-indicators">
+                    <li data-target="#caarouseelIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#caarouseelIndicators" data-slide-to="1"></li>
+                    <li data-target="#caarouseelIndicators" data-slide-to="2"></li>
+                    <li data-target="#caarouseelIndicators" data-slide-to="3"></li>
+                  </ol>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img class="d-block" style="width:1000px; height:700px" src="images/사일런트.jpg" alt="First slide">
+                      <div class="carousel-caption d-none d-md-block"><span style="background-color: white; color:black; font-weight:bold; padding-left: 5px; padding-right:5px">드라마 ⟪사일런트⟫</span></div>
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block" style="width:1000px; height:700px" src="images/프라이드.jpg" alt="Second slide">
+                      <div class="carousel-caption d-none d-md-block"><span style="background-color: white; color:black; font-weight:bold; padding-left: 5px; padding-right:5px">드라마 ⟪프라이드⟫</span></div>
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block" style="width:1000px; height:700px" src="images/orange.jpg" alt="Third slide">
+                      <div class="carousel-caption d-none d-md-block"><span style="background-color: white; color:black; font-weight:bold; padding-left: 5px; padding-right:5px">드라마 ⟪오렌지데이즈⟫</span></div>
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block" style="width:1000px; height:700px" src="images/oki.png" alt="Fourth slide">
+                      <div class="carousel-caption d-none d-md-block"><span style="background-color: white; color:black; font-weight:bold; padding-left: 5px; padding-right:5px">드라마 ⟪오키테가미 쿄코의 비망록⟫</span></div>
+                    </div>
+                  </div>
+                  <a class="carousel-control-prev" href="#caarouseelIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#caarouseelIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="untree_co--site-section pb-0">
+          <div class="container-fluid px-md-0">
+            <div class="row justify-content-center text-center site-section pt-0">
+              <div class="col-md-6">
+                <h2 class="display-4" data-aos="fade-up">Chinese Dramas</h2>
+                <p data-aos="fade-up" data-aos-delay="100" style="font-weight:bold" class="h5 m-4"><img src="images/svg/heart.png" style="width:22px" alt=""> 중국 드라마 역시 올해 중국어 공부를 시작하면서 새롭게 보게 된 드라마다! <img src="images/svg/heart.png" style="width:22px" alt=""></p>
+                <p data-aos="fade-up" data-aos-delay="100">!</p>
+                <p data-aos="fade-up" data-aos-delay="100">자극적인 내용보다는 힐링, 감성적인 내용의 드라마를 더욱 선호하는 편🌝</p>
+                <p data-aos="fade-up" data-aos-delay="100">(다만 판타지 장르는 좋아하지 않는다😓)</p>
+              </div>
+            </div>
+            <div class="row no-gutters align-items-stretch room-animate site-section">
+              <div class="col-md-7 img-wrap image-stack-item image-stack-item-top" data-jarallax-element="-100">
+                <div id="caarouselIndicators" class="carousel slide" data-ride="carousel">
+                  <ol class="carousel-indicators">
+                    <li data-target="#caarouselIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#caarouselIndicators" data-slide-to="1"></li>
+                    <li data-target="#caarouselIndicators" data-slide-to="2"></li>
+                    <li data-target="#caarouselIndicators" data-slide-to="3"></li>
+                    <li data-target="#caarouselIndicators" data-slide-to="4"></li>
+                  </ol>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img class="d-block" style="width:1000px; height:700px" src="images/로스쿨.jpg" alt="First slide">
+                      <div class="carousel-caption d-none d-md-block"><span style="background-color: white; color:black; font-weight:bold; padding-left: 5px; padding-right:5px">JTBC 드라마 ⟪로스쿨⟫</span></div>
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block" style="width:1000px; height:700px" src="images/런온.jpg" alt="Second slide">
+                      <div class="carousel-caption d-none d-md-block"><span style="background-color: white; color:black; font-weight:bold; padding-left: 5px; padding-right:5px">JTBC 드라마 ⟪런온⟫</span></div>
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block" style="width:1000px; height:700px" src="images/싸인.png" alt="Third slide">
+                      <div class="carousel-caption d-none d-md-block"><span style="background-color: white; color:black; font-weight:bold; padding-left: 5px; padding-right:5px">SBS 드라마 ⟪싸인⟫</span></div>
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block" style="width:1000px; height:700px" src="images/서른.jpg" alt="Fourth slide">
+                      <div class="carousel-caption d-none d-md-block"><span style="background-color: white; color:black; font-weight:bold; padding-left: 5px; padding-right:5px">SBS 드라마 ⟪서른이지만 열일곱입니다⟫</span></div>
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block" style="width:1000px; height:700px" src="images/당신이 잠든 사이에.jpg" alt="Fifth slide">
+                      <div class="carousel-caption d-none d-md-block"><span style="background-color: white; color:black; font-weight:bold; padding-left: 5px; padding-right:5px">SBS 드라마 ⟪당신이 잠든 사이에⟫</span></div>
+                    </div>
+                  </div>
+
+                  <a class="carousel-control-prev" href="#caarouselIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#caarouselIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </div>
+              </div>
+
+              <div class="col-md-5">
+                <div class="row justify-content-center">
+                  <div class="col-md-8 py-5">
+                    <div class="room-exerpt">
+                      <div class="room-price mb-4 font-weight-bold">인생 한드 list</div>
+                      <p>지금까지 봤던 드라마 중에서 '인생 드라마'라고 꼽을 수 있는 <br> 드라마들입니다!  </p>
+                      <div class="row mt-4">
+                        <div class="col-12">
+                          <h4 class="mb-4 font-weight-bold"> 감상평 요약 <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-search-heart" viewBox="0 0 16 16">
+                            <path d="M6.5 4.482c1.664-1.673 5.825 1.254 0 5.018-5.825-3.764-1.664-6.69 0-5.018Z"/>
+                            <path d="M13 6.5a6.471 6.471 0 0 1-1.258 3.844c.04.03.078.062.115.098l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1.007 1.007 0 0 1-.1-.115h.002A6.5 6.5 0 1 1 13 6.5ZM6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11Z"/>
+                          </svg></h4>
+                          <ul class="list-unstyled ul-check">
+                            <li>'로스쿨'은 내가 좋아하는 추리적 요소와 함께 법과 관련된 내용이 포함돼 있어 너무나 재밌게 봤던 드라마다!<br>사건의 범인을 추리해내는 쫄깃한 과정과 적당한 반전은 덤!</li>
+                            <li>'런온'은 주체적인 캐릭터와 흔하지 않은 스토리가 일품인 드라마다!잔잔하지만 짙은 울림이 있는 대사와 연출이 무척 취향이었다★</li>
+                            <li>'싸인'은 2011년 드라마지만, 아직까지도 내용이 생생하게 기억날 정도로 인상 깊었던 드라마로, 특히 마지막화는 지금 봐도 신선한 충격 그 자체다! 해당 드라마의 영향으로 법의학에도 관심을 갖게 되기도 했다.</li>
+                            <li>'서른이지만 열입곱입니다'는 특별한 악역이 없었던 점을 특징이라 할 수 있을 만큼 따듯하고 드라마였다! 마음의 힐링을 얻고 싶을 때 종종 찾아보길 추천한다!</li>
+                            <li>'당신이 잠든 사이에'는 개인적으로 좋아했던 작가님의 작품이었던 만큼 지루하지 않게 완주한 드라마다! 약간의 판타지 요소가 들어있지만 오히려 복선의 일부로 느껴져 극에 대한 몰입감을 더해줬다!</li>
                           </ul>
                         </div>
                       </div>
