--- a/index.html
+++ b/index.html
@@ -116,39 +116,39 @@
 
         <div class="owl-carousel owl-hero">
 
+          <div class="untree_co--site-hero overlay" style="background-image: url('My Page/Portfolio/images/배배경.jpg')">
+            <div class="container">
+              <div class="row align-items-center justify-content-center">
+                <div class="col-md-8">
+                  <div class="site-hero-contents text-center" data-aos="fade-up">
+                    <h1 class="hero-heading mb-5">Hello, <br> I'm Yujin</h1>
+                    <div class="sub-text">
+                      <p class="mb-5">Welcome to my page!</p>
+                      <a href="#about" class="btn btn-light">About Me</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="untree_co--site-hero overlay"  style="background-image: url('My Page/Portfolio/images/배경3.jpg')">
+            <div class="container">
+              <div class="row align-items-center justify-content-center">
+                <div class="col-md-8">
+                  <div class="site-hero-contents text-center" data-aos="fade-up">
+                    <h1 class="hero-heading mb-5">Hello, <br> I'm Yujin</h1>
+                    <div class="sub-text">
+                      <p class="mb-5">Welcome to my page!</p>
+                      <a href="#about" class="btn btn-light">About Me</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="untree_co--site-hero overlay" style="background-image: url('My Page/Portfolio/images/slider_2.jpg')">
-            <div class="container">
-              <div class="row align-items-center justify-content-center">
-                <div class="col-md-8">
-                  <div class="site-hero-contents text-center" data-aos="fade-up">
-                    <h1 class="hero-heading mb-5">Hello, <br> I'm Yujin</h1>
-                    <div class="sub-text">
-                      <p class="mb-5">Welcome to my page!</p>
-                      <a href="#about" class="btn btn-light">About Me</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="untree_co--site-hero overlay"  style="background-image: url('My Page/Portfolio/images/배배경.jpg')">
-            <div class="container">
-              <div class="row align-items-center justify-content-center">
-                <div class="col-md-8">
-                  <div class="site-hero-contents text-center" data-aos="fade-up">
-                    <h1 class="hero-heading mb-5">Hello, <br> I'm Yujin</h1>
-                    <div class="sub-text">
-                      <p class="mb-5">Welcome to my page!</p>
-                      <a href="#about" class="btn btn-light">About Me</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="untree_co--site-hero overlay" style="background-image: url('My Page/Portfolio/images/배경3.jpg')">
             <div class="container">
               <div class="row align-items-center justify-content-center">
                 <div class="col-md-8">
@@ -452,7 +452,7 @@
                   <div class="media-29191-icon">
                     <img src="My%20Page/Portfolio/images/svg/volunteer.png" alt="Image" class="img-fluid" style="width:80px">
                   </div>
-                  <h3>Volunteering experience</h3>
+                  <h3>Volunteering Experience</h3>
                   <p>
                     <a class="readmore reverse mt-3" data-toggle="collapse" href="#collapseExample5">Details</a>
                   </p>
